--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+#cfg-if = "1"
+winit = { version="0.29.9", features = ["rwh_05"] }
+log  = "0.4.20"
+wgpu = "0.18.0"
+glam = "0.25.0"
+eframe = "0.25.0"
+egui = "0.25.0"
+egui-wgpu = "0.25.0"
+pollster = "0.3.0"
