--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,15 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+dynamic_shaders= []
+
+#[[example]]
+#name = "window"
+#required-features = ["dynamic_shaders"]
+
 [dependencies]
-#cfg-if = "1"
+cfg-if = "1"
 winit = { version="0.29.9", features = ["rwh_05"] }
 log  = "0.4.20"
 wgpu = "0.18.0"
