--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,25 @@ winit = "0.30.9"
 log  = "0.4.27"
 wgpu = "24.0.3"
 glam = { version = "0.30.2", features = ["glam-assert"] }
-eframe = "0.31.1"
 egui = "0.31.1"
 egui-wgpu = "0.31.1"
 pollster = "0.4.0"
-egui-winit = "0.31.1"
+egui-winit = { version = "0.31.1", default-features = false, features = ["links", "wayland", "x11"] }
 env_logger = "0.11.8"
-tobj = "4.0.3"
+tobj = { version = "4.0.3", features = ["futures"] }
 bytemuck = "1.22.0"
 clap = { version = "4.5.37", features = ["derive"] }
+getrandom = { version = "0.3.3", features = ["wasm_js"] }
 rand = "0.9.2"
+wasm-bindgen = "0.2.100"
+console_error_panic_hook = "0.1.7"
+thiserror = "2.0.12"
+wasm-bindgen-futures = "0.4.50"
+console_log = "1.0.0"
+futures = { version = "0.3.31", default-features = false, features = ["std"] }
+reqwest = "0.12.22"
+bytes = "1.10.1"
+
+[dependencies.web-sys]
+version = "0.3.77"
+features = ["Window", "Request", "RequestInit", "RequestMode", "Response", "ReadableStream", "Location"]
