--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: jetli/trunk-action@v0.5.1
         with:
           version: 'latest'
+      - run: rustup target add wasm32-unknown-unknown
       - run: trunk build --example pathtracer
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
