--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -15,12 +15,25 @@ jobs:
         with:
           version: 'latest'
       - run: rustup target add wasm32-unknown-unknown
+      - name: Cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - run: trunk build --example pathtracer
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: 'dist'
+
   deploy-pages:
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{steps.deployment.outputs.page_url}}
