--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,8 @@ console_log = "1.0.0"
 futures = { version = "0.3.31", default-features = false, features = ["std"] }
 reqwest = "0.12.22"
 bytes = "1.10.1"
+exr = "1.73.0"
 
 [dependencies.web-sys]
 version = "0.3.77"
-features = ["Window", "Request", "RequestInit", "RequestMode", "Response", "ReadableStream", "Location"]
+features = ["Window", "Request", "RequestInit", "RequestMode", "Response", "ReadableStream", "Location", "Blob", "Url", "HtmlAnchorElement", "Document", "Element", "Node", "console"]
