--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,8 @@ futures = { version = "0.3.31", default-features = false, features = ["std"] }
 reqwest = "0.12.22"
 bytes = "1.10.1"
 exr = "1.73.0"
+wgsl_preprocessor = { path = "crates/wgsl_preprocessor" }
+wgsl_preprocessor_macro = { path = "crates/wgsl_preprocessor_macro" }
 
 [dependencies.web-sys]
 version = "0.3.77"
