--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ bytes = "1.10.1"
 exr = "1.73.0"
 wgsl_preprocessor = { path = "crates/wgsl_preprocessor" }
 wgsl_preprocessor_macro = { path = "crates/wgsl_preprocessor_macro" }
+chrono = "0.4.41"
 
 [dependencies.web-sys]
 version = "0.3.77"
