--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ cfg-if = "1"
 winit = "0.30.9"
 log  = "0.4.27"
 wgpu = "24.0.3"
-glam = { version = "0.30.2", features = ["glam-assert"] }
+glam = { version = "0.30.2", features = ["glam-assert", "serde"] }
 egui = "0.31.1"
 egui-wgpu = "0.31.1"
 pollster = "0.4.0"
@@ -43,6 +43,9 @@ wgsl_preprocessor_macro = { path = "crates/wgsl_preprocessor_macro" }
 chrono = "0.4.41"
 egui_plot = "0.32.1"
 egui_extras = "0.31.1"
+toml = "0.9.6"
+serde = "1.0.225"
+serde_arrays = "0.2.0"
 
 [dependencies.web-sys]
 version = "0.3.77"
