--- a/models/cornell_box.toml
+++ b/models/cornell_box.toml
@@ -1,12 +1,13 @@
 name = "Cornell Box"
 
 [camera]
-position = [278.0, 273.0, -800.0]
+position = [0.278, 0.273, -0.800]
 angle = [1.5707963267948966, -1.5707963267948966, 0.0]
-fov = 39.3
-near = 500.0
-far = 2000.0
+fov = 39.3077
+near = 0.500
+far = 2.000
 
 [[models]]
 type = "WavefrontObj"
 file = "cornell_box.obj"
+scale = 0.001            # mm to m
