--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ egui_extras = "^0.33.0"
 toml = "0.9.6"
 serde = "1.0.225"
 serde_arrays = "0.2.0"
+web-time = "1.1.0"
 
 [dependencies.web-sys]
 version = "0.3.77"
