--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ tobj = { version = "4.0.3", features = ["futures"] }
 bytemuck = "1.22.0"
 clap = { version = "4.5.37", features = ["derive"] }
 getrandom = { version = "0.3.3", features = ["wasm_js"] }
-rand = "0.9.2"
+rand = { version = "0.9.2", features = ["small_rng"] }
 wasm-bindgen = "0.2.100"
 console_error_panic_hook = "0.1.7"
 thiserror = "2.0.12"
